# simplerestblog

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  justfile  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 2024_02_08_1413-111ffdf326a6_migrate_.py  2024_02_08_1545-1fac25c330fa_make_.py  2024_02_10_1939-f8f9998276e0_add_.py  2024_02_13_0947-2d8a6160a050_create_.py  2024_02_14_2218-913b1d483431_make_.py  2024_02_15_1531-c4098caf6fbd_add_.py  2024_02_15_2148-87e4a100afc1_change_.py  2024_02_16_1510-a039da76d57d_design_.py  2024_02_16_1728-0a861abcff7d_add_is_.py  2024_02_20_2121-8cd7bf6413dc_remove_.py  2024_03_25_2154-6fec2f86d644_add_.py
src/: __main__.py  app.py
src/core/: acl.py  config.py  database.py  depends.py  enums.py  exceptions.py  redis_db.py  schemas.py  security.py  types.py  utils.py
src/repository/: __init__.py  comment_repo.py  draft_repo.py  models.py  post_repo.py  tag_repo.py  unitofwork.py  user_repo.py
src/service/: __init__.py  comment_service.py  draft_service.py  post_service.py  user_service.py
src/web/: __init__.py  app.py  auth.py  comments.py  drafts.py  globals.py  posts.py  user_route.py  users.py
tests/: __init__.py  conftest.py  database.py  redis_db.py  test_acl.py  test_comments.py  test_drafts.py  test_global.py  test_posts.py  test_users.py
tests/auth/: __init__.py  conftest.py  fixtures.py  test_auth.py
tests/shared/: database.py  redis_db.py
